--- a/src/assets/base.css
+++ b/src/assets/base.css
@@ -2,6 +2,9 @@
   --main-clr: #FF1616;
   --border-clr: #EEE1E0;
   --main-border: 1px solid #eae8e4;
+  --font-gray: #7c6e65;
+  --soft-gray: #abb8c3;
+  --main-black: #19110b;
   --box-shadow: 0px 0px 40px 0px rgba(22, 22, 25, 0.1);
 }
 *,
